--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
 
 <body>
-    <div class="jumbotron">
-        <h1 class="display-4">Coding Quiz Challenge</h1>
-        <p id="counter">Try to answer the following code-related questions within the time limit.
-            Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
-        <hr class="my-4">
-        <button id="start-quiz">Start Quiz</button>
-    </div>
+    <header>
+        <div class="jumbotron">
+            <h1 class="display-4">Coding Quiz Challenge</h1>
+            <p id="counter">Try to answer the following code-related questions within the time limit.
+                Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
+            <hr class="my-4">
+            <button id="start-quiz">Start Quiz</button>
+        </div>
+    </header>
 
 
     <div class="container">
@@ -50,11 +52,12 @@
                     Numbers
                 </label>
             </div>
+            <h4 id="wrongchoice1"></h4>
         </form>
-    </div>
-    <div class="container">
+
         <form id="question-two" style="display: none;">
             <p>Arrays in JavaSript can be used to store: </p>
+
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="q2choice" id="choice" value="numbers and strings">
                 <label class="form-check-label" for="choice">
@@ -79,13 +82,14 @@
                     all of the above
                 </label>
             </div>
+            <h4 id="wrongchoice2"></h4>
         </form>
-    </div>
-    <div class="container">
+
         <form id="question-three" style="display: none;">
             <p>A very useful tool used during development and debugging for printing content to
                 the
                 debugger is:</p>
+
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="q3choice" id="choice" value="JavaSript">
                 <label class="form-check-label" for="choice">
@@ -110,13 +114,13 @@
                     console.log
                 </label>
             </div>
+            <h4 id="wrongchoice3"></h4>
         </form>
     </div>
-    <div id="results" style="display: none;">
-
+    <div id="results" style="display: none; text-align: center;">
         <h1>Quiz Complete!</h1>
         <h2 id="final-results"></h2>
-        <form class="form-inline">
+        <form class="form-center">
             <div class="form-group mx-sm-3 mb-2">
                 <label class="sr-only">Your Initials</label>
                 <input type="text" id="Initials" placeholder="Initials">
